[package]
authors = ["jD91mZM2 <me@krake.one>"]
edition = "2018"
name = "termwm"
version = "0.1.0"

[dependencies]
failure = { version = "0.1.3", optional = true }
linked-hash-map = "0.5.1"
mio = "0.6.16"
nix = { version = "0.11.0", optional = true }
pseudoterm = "0.1.1"
ransid = "0.4.6"

[features]
default = ["signals"]
signals = ["failure", "nix"]
